docs/versioned_docs/version-1.2.5/usage/using_blocks.mdx
<!-- Generated by port_legacy_docs.py v1 from v1.2.5 (d226d745169891f79b1a767ebbc64dc51143d178). Historical snapshot—do not edit directly. -->
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

<a id="using-blocks"></a>
# Using Blocks

Blocks are the fundamental visual units of a Slack message. Each block type renders as a different UI component (a section of text, a header, a divider, an image, a row of buttons, and so on). A `Message` is composed of one or more blocks, rendered top-to-bottom.

This page lists every block type supported by `slackblocks`, with:

- A short description of what the block is for.
- The `slackblocks` Python code to construct it.
- The JSON payload that's produced.
- A screenshot of how it looks in Slack.

For the reverse mapping — looking up a class by name — see the [Blocks reference](/v1.2.5/reference/blocks). For interactive UI bits (buttons, menus, date pickers) that go *inside* blocks, see [Elements](/v1.2.5/reference/elements).

## Section Block {#section-block}
<a id="blocks.SectionBlock"></a>
**Class**

```python
SectionBlock(text: Optional[TextLike] = None, block_id: Optional[str] = None, fields: Optional[Union[TextLike, List[TextLike]]] = None, accessory: Optional[Element] = None)
```

<div className="api-docstring">

A section is one of the most flexible blocks available -
it can be used as a simple text block, or with any of the
available block elements.

Section blocks can also optionally be given an "accessory,"
which is typically one of the interactive
[Elements](/v1.2.5/reference/elements).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `Optional[TextLike]` | text to include in the block. Can be a string or `Text` object (of either<br />`mrkdwn` or `plaintext` variety). Defaults to markdown if unspecified. One of either<br />`text` or `fields` must be provided. |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier for the block. |
| `fields` | `Optional[Union[TextLike, List[TextLike]]]` | a list of text objects. One of either `text` or `fields` must be provided. |
| `accessory` | `Optional[Element]` | an optional [Element](/v1.2.5/reference/elements) object<br />that will take a secondary place in the block (after or to the side of  `text`<br />or `fields`). |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation checks. |

</div>
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">


```python
from slackblocks import CheckboxGroup, Option, SectionBlock

SectionBlock(
    text="This is a section block with a checkbox accessory.",
    block_id="fake_block_id",
    accessory=CheckboxGroup(
        action_id="checkboxes-action",
        options=[
            Option(
                text="*Your Only Option*",
                value="option_one"
            )
        ]
    )
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "section",
    "block_id": "fake_block_id",
    "text": {
        "type": "mrkdwn",
        "text": "This is a section block with a checkbox accessory."
    },
    "accessory": {
        "type": "checkboxes",
        "options": [
            {
                "text": {
                    "type": "mrkdwn",
                    "text": "*Your Only Option*"
                },
                "value": "option_one"
            }
        ],
        "action_id": "checkboxes-action"
    }
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of a Section Block](/img/legacy/954e28666ca3228b9565e54afeb0b9a6c920fbfb/usage/section.png)

</TabItem>
</Tabs>
## Rich Text Block {#rich-text-block}
<a id="blocks.RichTextBlock"></a>
**Class**

```python
RichTextBlock(elements: Union[RichTextObject, List[RichTextObject]], block_id: Optional[str] = None)
```

<div className="api-docstring">

A RichTextBlock is used to provide easier rich text formatting
    than standard markdown text (e.g. in a
    [`SectionBlock`](/v1.2.5/reference/blocks/#blocks.SectionBlock))
    and access to text formatting features not available in traditional
    markdown (e.g. strikethrough). See the various rich text elements
    you can include [here](/v1.2.5/reference/rich_text).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `elements` | `Union[RichTextObject, List[RichTextObject]]` | a single [rich text element](/v1.2.5/reference/rich_text)<br />or a list of those elements. |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier<br />for the block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if the elements in `elements` are not valid rich<br />text elements. |

</div>
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
from slackblocks import RichTextBlock, RichTextSection, RichText

RichTextBlock(
    RichTextSection(
        [
            RichText(
                "You 'bout to witness hip-hop in its most purest",
                bold=True,
            ),
            RichText(
                "Most rawest form, flow almost flawless",
                strike=True,
            ),
            RichText(
                "Most hardest, most honest known artist",
                italic=True,
            ),
        ]
    ),
    block_id="fake_block_id",
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "rich_text",
    "block_id": "fake_block_id",
    "elements": [
        {
            "type": "rich_text_section",
            "elements": [
                {
                    "type": "text",
                    "text": "You 'bout to witness hip-hop in its most purest\n",
                    "style": {
                        "bold": true
                    }
                },
                {
                    "type": "text",
                    "text": "Most rawest form, flow almost flawless\n",
                    "style": {
                        "strike": true
                    }
                },
                {
                    "type": "text",
                    "text": "Most hardest, most honest known artist\n",
                    "style": {
                        "italic": true
                    }
                }
            ]
        }
    ]
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of a Rich Text Block](/img/legacy/954e28666ca3228b9565e54afeb0b9a6c920fbfb/usage/rich_text.png)

</TabItem>
</Tabs>
## Header Block {#header-block}
<a id="blocks.HeaderBlock"></a>
**Class**

```python
HeaderBlock(text: Union[str, Text], block_id: Optional[str] = None)
```

<div className="api-docstring">

A Header Block is a plain-text block that displays in a larger, bold font.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `Union[str, Text]` | the text that will be rendered as a heading. |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier for the block. |

</div>
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
from slackblocks import HeaderBlock

HeaderBlock(
    "This is a header block",
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "header",
    "text": {
        "type": "plain_text",
        "text": "This is a header block",
        "emoji": true
    }
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of a Header Block](/img/legacy/954e28666ca3228b9565e54afeb0b9a6c920fbfb/usage/header.png)

</TabItem>
</Tabs>
## Image Block {#image-block}
<a id="blocks.ImageBlock"></a>
**Class**

```python
ImageBlock(image_url: str, alt_text: Optional[str] = ' ', title: Optional[Union[Text, str]] = None, block_id: Optional[str] = None)
```

<div className="api-docstring">

An Image Block contains a single graphic, accessed by URL.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `image_url` | `str` | the URL pointing to the image file you want to display. |
| `alt_text` | `Optional[str]` | alternative text for accessibility purposes and when the image fails to load. |
| `title` | `Optional[Union[Text, str]]` | an optional text title to be presented with the image. |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier for the block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | when one or more of the provided args fails validation. |

</div>
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
from slackblocks import ImageBlock

ImageBlock(
    image_url="https://api.slack.com/img/blocks/bkb_template_images/beagle.png",
    alt_text="a beagle",
    title="dog",
    block_id="fake_block_id",
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "image",
    "block_id": "fake_block_id",
    "image_url": "https://api.slack.com/img/blocks/bkb_template_images/beagle.png",
    "alt_text": "a beagle",
    "title": {
        "type": "plain_text",
        "text": "dog"
    }
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of an Image Block](/img/legacy/954e28666ca3228b9565e54afeb0b9a6c920fbfb/usage/image.png)

</TabItem>
</Tabs>
## Input Block {#input-block}
<a id="blocks.InputBlock"></a>
**Class**

```python
InputBlock(label: TextLike, element: Element, dispatch_action: bool = False, block_id: Optional[str] = None, hint: Optional[TextLike] = None, optional: bool = False)
```

<div className="api-docstring">

A block that collects information from users - it can hold a plain-text
input element, a checkbox element, a radio button element, a select
menu element, a multi-select menu element, or a datepicker.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `label` | `TextLike` | the name which identifies the input field. |
| `element` | `Element` | an interactive [Element](/v1.2.5/reference/elements)<br />(e.g. a text field). |
| `dispatch_action` | `bool` | whether the [Element](/v1.2.5/reference/elements)<br />should trigger the sending of a `block_actions` payload. |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier for the block. |
| `hint` | `Optional[TextLike]` | an optional additional guide on what input the user should prodive. |
| `optional` | `bool` | whether this input field may be empty when the user submits e.g. the modal. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | when any of the provided arguments fail validation. |

</div>
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
from slackblocks import InputBlock, Text, TextType, PlainTextInput

InputBlock(
    label=Text("Label", type_=TextType.PLAINTEXT, emoji=True),
    hint=Text("Hint", type_=TextType.PLAINTEXT, emoji=True),
    element=PlainTextInput(action_id="action"),
    block_id="fake_block_id",
    optional=True,
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "input",
    "block_id": "fake_block_id",
    "label": {
        "type": "plain_text",
        "text": "Label",
        "emoji": true
    },
    "element": {
        "type": "plain_text_input",
        "action_id": "action"
    },
    "hint": {
        "type": "plain_text",
        "text": "Hint",
        "emoji": true
    },
    "optional": true
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of an Input Block](/img/legacy/954e28666ca3228b9565e54afeb0b9a6c920fbfb/usage/input.png)

</TabItem>
</Tabs>
## Divider Block {#divider-block}
<a id="blocks.DividerBlock"></a>
**Class**

```python
DividerBlock(block_id: Optional[str] = None)
```

<div className="api-docstring">

A content divider, like an `&lt;hr&gt;` in HTML, to split up different blocks inside of
a message.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier for the block. |

</div>
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
from slackblocks import DividerBlock

DividerBlock()
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "divider"
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of an Divider Block](/img/legacy/954e28666ca3228b9565e54afeb0b9a6c920fbfb/usage/divider.png)

</TabItem>
</Tabs>
## File Block {#file-block}
<a id="blocks.FileBlock"></a>
**Class**

```python
FileBlock(external_id: str, block_id: Optional[str], source: str = 'remote')
```

<div className="api-docstring">

Displays a remote file (e.g. a PDF).

For details on how remote files are exposed to Slack, see
[https://api.slack.com/messaging/files#adding](https://api.slack.com/messaging/files#adding).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `external_id` | `str` | the ID assigned to the remote file when it was added to Slack. |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier for the block. |
| `source` | `str` | always "remote" as per the Slack API (may change in the future). |

</div>
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
from slackblocks import FileBlock

FileBlock(
    external_id="external_id",
    block_id="fake_block_id",
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "file",
    "external_id": "external_id",
    "source": "remote",
    "block_id": "fake_block_id"
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of an File Block](https://a.slack-edge.com/f156a3/img/api/file_upload_remote_file.png)
* Note that this example comes from the Slack Web API docs.

</TabItem>
</Tabs>
## Context Block {#context-block}
<a id="blocks.ContextBlock"></a>
**Class**

```python
ContextBlock(elements: Optional[List[Union[Element, CompositionObject]]] = None, block_id: Optional[str] = None)
```

<div className="api-docstring">

A `ContextBlock` displays contextul message info, including both images and text.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `elements` | `Optional[List[Union[Element, CompositionObject]]]` | a list of `Text` objects and `Image` elements. |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier for the block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | when items in `elements` are not `Text` or `Image` or exceed 10 items. |

</div>
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
from slackblocks import ContextBlock, Text

ContextBlock(
    elements=[
        Text("Hello, world!"),
    ], 
    block_id="fake_block_id"
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "context",
    "block_id": "fake_block_id",
    "elements": [
        {
            "type": "mrkdwn",
            "text": "Hello, world!"
        }
    ]
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of a Context Block](/img/legacy/954e28666ca3228b9565e54afeb0b9a6c920fbfb/usage/context.png)

</TabItem>
</Tabs>
## Actions Block {#actions-block}
<a id="blocks.ActionsBlock"></a>
**Class**

```python
ActionsBlock(elements: Optional[List[Element]] = None, block_id: Optional[str] = None)
```

<div className="api-docstring">

A `Block` that is used to hold interactive elements (normally for users to interface with).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `elements` | `Optional[List[Element]]` | a list of [Elements](/v1.2.5/reference/elements)<br />(up to a maximum of 25). |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier for the block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the items in `elements` are invalid. |

</div>
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
from slackblocks import ActionsBlock, CheckboxGroup, Option

ActionsBlock(
    block_id="fake_block_id",
    elements=CheckboxGroup(
        action_id="actionId-0",
        options=[
            Option(text="*a*", value="a", description="*a*"),
            Option(text="*b*", value="b", description="*b*"),
            Option(text="*c*", value="c", description="*c*"),
        ],
    ),
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "actions",
    "block_id": "fake_block_id",
    "elements": [
        {
            "type": "checkboxes",
            "action_id": "actionId-0",
            "options": [
                {
                    "text": {
                        "type": "mrkdwn",
                        "text": "*a*"
                    },
                    "value": "a",
                    "description": {
                        "type": "plain_text",
                        "text": "*a*"
                    }
                },
                {
                    "text": {
                        "type": "mrkdwn",
                        "text": "*b*"
                    },
                    "value": "b",
                    "description": {
                        "type": "plain_text",
                        "text": "*b*"
                    }
                },
                {
                    "text": {
                        "type": "mrkdwn",
                        "text": "*c*"
                    },
                    "value": "c",
                    "description": {
                        "type": "plain_text",
                        "text": "*c*"
                    }
                }
            ]
        }
    ]
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of an Actions Block](/img/legacy/954e28666ca3228b9565e54afeb0b9a6c920fbfb/usage/actions.png)

</TabItem>
</Tabs>
## Table Block {#table-block}
<a id="blocks.TableBlock"></a>
**Class**

```python
TableBlock(rows: List[List[Union[RawText, RichTextObject]]], column_settings: Optional[List[ColumnSettings]] = None, block_id: Optional[str] = None)
```

<div className="api-docstring">

A `TableBlock` displays data in a table format.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `rows` | `List[List[Union[RawText, RichTextObject]]]` | a list of lists of `RawText` or `RichTextObject` objects. |
| `column_settings` | `Optional[List[ColumnSettings]]` | a list of `ColumnSettings` objects. |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier for the block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | when items in `rows` are not `RawText` or `RichTextObject` objects. |
| `InvalidUsageError` | when the number of column_settings does not match the number of<br />columns in each row. |
| `InvalidUsageError` | when the number of rows is greater than 100. |
| `InvalidUsageError` | when the number of columns in a row is greater than 20. |
| `InvalidUsageError` | when the number of column_settings is greater than 20. |

</div>
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
from slackblocks import (
    ColumnSettings,
    RawText,
    RichText,
    RichTextLink,
    RichTextSection,
    TableBlock,
)

TableBlock(
    column_settings=[
        ColumnSettings(align="right", is_wrapped=True),
        ColumnSettings(align="left"),
    ],
    rows=[
        [
            RichTextSection(
                elements=[RichText(text="Header 1", bold=True)],
            ),
            RichTextSection(
                elements=[RichText(text="Header 2", bold=True)],
            ),
        ],
        [
            RawText(text="Datum 1"),
            RichTextSection(
                elements=[
                    RichTextLink(
                        url="https://slack.com",
                        text="Datum 2",
                    )
                ],
            ),
        ],
    ],
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "blocks": [
        {
            "type": "table",
            "rows": [
                [
                    {
                        "type": "rich_text",
                        "elements": [
                            {
                                "type": "rich_text_section",
                                "elements": [
                                    {
                                        "type": "text",
                                        "text": "Header 1",
                                        "style": {
                                            "bold": true
                                        }
                                    }
                                ]
                            }
                        ]
                    },
                    {
                        "type": "rich_text",
                        "elements": [
                            {
                                "type": "rich_text_section",
                                "elements": [
                                    {
                                        "type": "text",
                                        "text": "Header 2",
                                        "style": {
                                            "bold": true
                                        }
                                    }
                                ]
                            }
                        ]
                    }
                ],
                [
                    {
                        "type": "rich_text",
                        "elements": [
                            {
                                "type": "rich_text_section",
                                "elements": [
                                    {
                                        "type": "text",
                                        "text": "Datum 1"
                                    }
                                ]
                            }
                        ]
                    },
                    {
                        "type": "rich_text",
                        "elements": [
                            {
                                "type": "rich_text_section",
                                "elements": [
                                    {
                                        "type": "text",
                                        "text": "Datum 2"
                                    }
                                ]
                            }
                        ]
                    }
                ]
            ]
        }
    ]
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of a Table Block](/img/legacy/954e28666ca3228b9565e54afeb0b9a6c920fbfb/usage/table.png)

</TabItem>
</Tabs>
