docs/versioned_docs/version-2.0.0/usage/using_blocks.mdx
<!-- Generated by port_legacy_docs.py v1 from v2.0.0 (ab4d7f0208fff3167819ec2464ddd38f91ceb401). Historical snapshot—do not edit directly. -->
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

<a id="using-blocks"></a>
# Using Blocks

Blocks are the fundamental visual units of a Slack message. Each block type renders as a different UI component (a section of text, a header, a divider, an image, a row of buttons, and so on). A `Message` is composed of one or more blocks, rendered top-to-bottom.

This page lists every block type supported by `slackblocks`, with:

- A short description of what the block is for.
- The `slackblocks` Python code to construct it.
- The JSON payload that's produced.
- A screenshot of how it looks in Slack.

For the reverse mapping — looking up a class by name — see the [Blocks reference](/v2.0.0/reference/blocks). For interactive UI bits (buttons, menus, date pickers) that go *inside* blocks, see [Elements](/v2.0.0/reference/elements).

## Section Block {#section-block}
<a id="blocks.SectionBlock"></a>
**Class**

```python
SectionBlock(text: TextLike | None = None, block_id: str | None = None, fields: TextLike | list[TextLike] | None = None, accessory: Element | None = None)
```

<div className="api-docstring">

A section is one of the most flexible blocks available -
it can be used as a simple text block, or with any of the
available block elements.

Section blocks can also optionally be given an "accessory,"
which is typically one of the interactive
[Elements](/v2.0.0/reference/elements).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `TextLike \| None` | text to include in the block. Can be a string or `Text` object (of either<br />`mrkdwn` or `plaintext` variety). Defaults to markdown if unspecified. One of either<br />`text` or `fields` must be provided. |
| `block_id` | `str \| None` | you can use this field to provide a deterministic identifier for the block. |
| `fields` | `TextLike \| list[TextLike] \| None` | a list of text objects. One of either `text` or `fields` must be provided. |
| `accessory` | `Element \| None` | an optional [Element](/v2.0.0/reference/elements) object<br />that will take a secondary place in the block (after or to the side of  `text`<br />or `fields`). |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation checks. |

</div>

### from_dict classmethod {#blocks.SectionBlock.from_dict}

```python
from_dict(data: dict[str, Any]) -> SectionBlock
```

Parse a Slack ``section`` block payload.

Round-trips ``text`` and ``fields``. Raises ``NotImplementedError``
if an ``accessory`` is present, because the accessory is an
``Element`` and ``Element.from_dict`` is not yet implemented
(Phase 7.4b).
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">


```python
from slackblocks import CheckboxGroup, Option, SectionBlock

SectionBlock(
    text="This is a section block with a checkbox accessory.",
    block_id="fake_block_id",
    accessory=CheckboxGroup(
        action_id="checkboxes-action",
        options=[
            Option(
                text="*Your Only Option*",
                value="option_one"
            )
        ]
    )
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "section",
    "block_id": "fake_block_id",
    "text": {
        "type": "mrkdwn",
        "text": "This is a section block with a checkbox accessory."
    },
    "accessory": {
        "type": "checkboxes",
        "options": [
            {
                "text": {
                    "type": "mrkdwn",
                    "text": "*Your Only Option*"
                },
                "value": "option_one"
            }
        ],
        "action_id": "checkboxes-action"
    }
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of a Section Block](/img/legacy/081da8626e0988b4a2683f4ed6644eb01e32569c/usage/section.png)

</TabItem>
</Tabs>
## Rich Text Block {#rich-text-block}
<a id="blocks.RichTextBlock"></a>
**Class**

```python
RichTextBlock(elements: RichTextObject | list[RichTextObject], block_id: str | None = None)
```

<div className="api-docstring">

A RichTextBlock is used to provide easier rich text formatting
    than standard markdown text (e.g. in a
    [`SectionBlock`](/v2.0.0/reference/blocks/#blocks.SectionBlock))
    and access to text formatting features not available in traditional
    markdown (e.g. strikethrough). See the various rich text elements
    you can include [here](/v2.0.0/reference/rich_text).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `elements` | `RichTextObject \| list[RichTextObject]` | a single [rich text element](/v2.0.0/reference/rich_text)<br />or a list of those elements. |
| `block_id` | `str \| None` | you can use this field to provide a deterministic identifier<br />for the block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if the elements in `elements` are not valid rich<br />text elements. |

</div>

### from_dict classmethod {#blocks.RichTextBlock.from_dict}

```python
from_dict(data: dict[str, Any]) -> RichTextBlock
```

Parse a Slack ``rich_text`` block payload.

Currently raises ``NotImplementedError`` because the rich-text
object hierarchy has a deeply nested element graph; round-tripping
is deferred to Phase 7.4c.
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
from slackblocks import RichTextBlock, RichTextSection, RichText

RichTextBlock(
    RichTextSection(
        [
            RichText(
                "You 'bout to witness hip-hop in its most purest",
                bold=True,
            ),
            RichText(
                "Most rawest form, flow almost flawless",
                strike=True,
            ),
            RichText(
                "Most hardest, most honest known artist",
                italic=True,
            ),
        ]
    ),
    block_id="fake_block_id",
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "rich_text",
    "block_id": "fake_block_id",
    "elements": [
        {
            "type": "rich_text_section",
            "elements": [
                {
                    "type": "text",
                    "text": "You 'bout to witness hip-hop in its most purest\n",
                    "style": {
                        "bold": true
                    }
                },
                {
                    "type": "text",
                    "text": "Most rawest form, flow almost flawless\n",
                    "style": {
                        "strike": true
                    }
                },
                {
                    "type": "text",
                    "text": "Most hardest, most honest known artist\n",
                    "style": {
                        "italic": true
                    }
                }
            ]
        }
    ]
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of a Rich Text Block](/img/legacy/081da8626e0988b4a2683f4ed6644eb01e32569c/usage/rich_text.png)

</TabItem>
</Tabs>
## Header Block {#header-block}
<a id="blocks.HeaderBlock"></a>
**Class**

```python
HeaderBlock(text: str | Text, block_id: str | None = None)
```

<div className="api-docstring">

A Header Block is a plain-text block that displays in a larger, bold font.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `str \| Text` | the text that will be rendered as a heading. |
| `block_id` | `str \| None` | you can use this field to provide a deterministic identifier for the block. |

</div>

### from_dict classmethod {#blocks.HeaderBlock.from_dict}

```python
from_dict(data: dict[str, Any]) -> HeaderBlock
```

Parse a Slack ``header`` block payload.
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
from slackblocks import HeaderBlock

HeaderBlock(
    "This is a header block",
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "header",
    "text": {
        "type": "plain_text",
        "text": "This is a header block",
        "emoji": true
    }
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of a Header Block](/img/legacy/081da8626e0988b4a2683f4ed6644eb01e32569c/usage/header.png)

</TabItem>
</Tabs>
## Markdown Block {#markdown-block}
<a id="blocks.MarkdownBlock"></a>
**Class**

```python
MarkdownBlock(text: str, block_id: str | None = None)
```

<div className="api-docstring">

Displays formatted Markdown text. Unlike the `mrkdwn` text style used in
[`SectionBlock`](/v2.0.0/reference/blocks/#blocks.SectionBlock),
`MarkdownBlock` uses **GitHub-flavored Markdown** for richer formatting,
including features like tables and code blocks. Added to Slack in 2024
for AI / agentic app outputs.

See: [https://api.slack.com/reference/block-kit/blocks#markdown](https://api.slack.com/reference/block-kit/blocks#markdown).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `str` | the Markdown-formatted text to display (1-12000 characters). |
| `block_id` | `str \| None` | you can use this field to provide a deterministic identifier<br />for the block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `LengthError` | if `text` is empty or longer than 12000 characters. |

</div>

### from_dict classmethod {#blocks.MarkdownBlock.from_dict}

```python
from_dict(data: dict[str, Any]) -> MarkdownBlock
```

Parse a Slack ``markdown`` block payload.
Slack added the `markdown` block type in 2024, primarily for AI / agentic apps. Unlike the `mrkdwn` text inside a [Section Block](#section-block), `MarkdownBlock` renders **GitHub-flavored Markdown**, supporting tables, code blocks, and richer list semantics.

`text` is required (1 - 12,000 characters).

<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
from slackblocks import MarkdownBlock

MarkdownBlock(
    text="**Hello!** Markdown blocks support _GitHub-flavored_ syntax.",
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "markdown",
    "text": "**Hello!** Markdown blocks support _GitHub-flavored_ syntax."
}
```

</TabItem>
</Tabs>
See the [Slack reference](https://api.slack.com/reference/block-kit/blocks#markdown) for the supported Markdown features.


## Image Block {#image-block}
<a id="blocks.ImageBlock"></a>
**Class**

```python
ImageBlock(image_url: str, alt_text: str | None = ' ', title: Text | str | None = None, block_id: str | None = None)
```

<div className="api-docstring">

An Image Block contains a single graphic, accessed by URL.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `image_url` | `str` | the URL pointing to the image file you want to display. |
| `alt_text` | `str \| None` | alternative text for accessibility purposes and when the image fails to load. |
| `title` | `Text \| str \| None` | an optional text title to be presented with the image. |
| `block_id` | `str \| None` | you can use this field to provide a deterministic identifier for the block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | when one or more of the provided args fails validation. |

</div>

### from_dict classmethod {#blocks.ImageBlock.from_dict}

```python
from_dict(data: dict[str, Any]) -> ImageBlock
```

Parse a Slack ``image`` block payload.
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
from slackblocks import ImageBlock

ImageBlock(
    image_url="https://api.slack.com/img/blocks/bkb_template_images/beagle.png",
    alt_text="a beagle",
    title="dog",
    block_id="fake_block_id",
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "image",
    "block_id": "fake_block_id",
    "image_url": "https://api.slack.com/img/blocks/bkb_template_images/beagle.png",
    "alt_text": "a beagle",
    "title": {
        "type": "plain_text",
        "text": "dog"
    }
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of an Image Block](/img/legacy/081da8626e0988b4a2683f4ed6644eb01e32569c/usage/image.png)

</TabItem>
</Tabs>
## Input Block {#input-block}
<a id="blocks.InputBlock"></a>
**Class**

```python
InputBlock(label: TextLike, element: Element, dispatch_action: bool = False, block_id: str | None = None, hint: TextLike | None = None, optional: bool = False)
```

<div className="api-docstring">

A block that collects information from users - it can hold a plain-text
input element, a checkbox element, a radio button element, a select
menu element, a multi-select menu element, or a datepicker.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `label` | `TextLike` | the name which identifies the input field. |
| `element` | `Element` | an interactive [Element](/v2.0.0/reference/elements)<br />(e.g. a text field). |
| `dispatch_action` | `bool` | whether the [Element](/v2.0.0/reference/elements)<br />should trigger the sending of a `block_actions` payload. |
| `block_id` | `str \| None` | you can use this field to provide a deterministic identifier for the block. |
| `hint` | `TextLike \| None` | an optional additional guide on what input the user should provide. |
| `optional` | `bool` | whether this input field may be empty when the user submits e.g. the modal. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | when any of the provided arguments fail validation. |

</div>

### from_dict classmethod {#blocks.InputBlock.from_dict}

```python
from_dict(data: dict[str, Any]) -> InputBlock
```

Parse a Slack ``input`` block payload.

Currently raises ``NotImplementedError`` because the nested
``element`` requires ``Element.from_dict``, which lands in Phase 7.4b.
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
from slackblocks import InputBlock, Text, TextType, PlainTextInput

InputBlock(
    label=Text("Label", type_=TextType.PLAINTEXT, emoji=True),
    hint=Text("Hint", type_=TextType.PLAINTEXT, emoji=True),
    element=PlainTextInput(action_id="action"),
    block_id="fake_block_id",
    optional=True,
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "input",
    "block_id": "fake_block_id",
    "label": {
        "type": "plain_text",
        "text": "Label",
        "emoji": true
    },
    "element": {
        "type": "plain_text_input",
        "action_id": "action"
    },
    "hint": {
        "type": "plain_text",
        "text": "Hint",
        "emoji": true
    },
    "optional": true
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of an Input Block](/img/legacy/081da8626e0988b4a2683f4ed6644eb01e32569c/usage/input.png)

</TabItem>
</Tabs>
## Divider Block {#divider-block}
<a id="blocks.DividerBlock"></a>
**Class**

```python
DividerBlock(block_id: str | None = None)
```

<div className="api-docstring">

A content divider, like an `&lt;hr&gt;` in HTML, to split up different blocks inside of
a message.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `block_id` | `str \| None` | you can use this field to provide a deterministic identifier for the block. |

</div>

### from_dict classmethod {#blocks.DividerBlock.from_dict}

```python
from_dict(data: dict[str, Any]) -> DividerBlock
```

Parse a Slack ``divider`` block payload.
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
from slackblocks import DividerBlock

DividerBlock()
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "divider"
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of an Divider Block](/img/legacy/081da8626e0988b4a2683f4ed6644eb01e32569c/usage/divider.png)

</TabItem>
</Tabs>
## File Block {#file-block}
<a id="blocks.FileBlock"></a>
**Class**

```python
FileBlock(external_id: str, block_id: str | None = None, source: str = 'remote')
```

<div className="api-docstring">

Displays a remote file (e.g. a PDF).

For details on how remote files are exposed to Slack, see
[https://api.slack.com/messaging/files#adding](https://api.slack.com/messaging/files#adding).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `external_id` | `str` | the ID assigned to the remote file when it was added to Slack. |
| `block_id` | `str \| None` | you can use this field to provide a deterministic identifier for the block. |
| `source` | `str` | always "remote" as per the Slack API (may change in the future). |

</div>

### from_dict classmethod {#blocks.FileBlock.from_dict}

```python
from_dict(data: dict[str, Any]) -> FileBlock
```

Parse a Slack ``file`` block payload.
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
from slackblocks import FileBlock

FileBlock(
    external_id="external_id",
    block_id="fake_block_id",
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "file",
    "external_id": "external_id",
    "source": "remote",
    "block_id": "fake_block_id"
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of an File Block](https://a.slack-edge.com/f156a3/img/api/file_upload_remote_file.png)
* Note that this example comes from the Slack Web API docs.

</TabItem>
</Tabs>
## Context Block {#context-block}
<a id="blocks.ContextBlock"></a>
**Class**

```python
ContextBlock(elements: list[Element | CompositionObject] | None = None, block_id: str | None = None)
```

<div className="api-docstring">

A `ContextBlock` displays contextul message info, including both images and text.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `elements` | `list[Element \| CompositionObject] \| None` | a list of `Text` objects and `Image` elements. |
| `block_id` | `str \| None` | you can use this field to provide a deterministic identifier for the block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | when items in `elements` are not `Text` or `Image` or exceed 10 items. |

</div>

### from_dict classmethod {#blocks.ContextBlock.from_dict}

```python
from_dict(data: dict[str, Any]) -> ContextBlock
```

Parse a Slack ``context`` block payload.

Text elements within the block are parsed back to ``Text``; image
elements raise ``NotImplementedError`` because ``Element.from_dict``
has not yet shipped (Phase 7.4b).
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
from slackblocks import ContextBlock, Text

ContextBlock(
    elements=[
        Text("Hello, world!"),
    ], 
    block_id="fake_block_id"
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "context",
    "block_id": "fake_block_id",
    "elements": [
        {
            "type": "mrkdwn",
            "text": "Hello, world!"
        }
    ]
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of a Context Block](/img/legacy/081da8626e0988b4a2683f4ed6644eb01e32569c/usage/context.png)

</TabItem>
</Tabs>
## Actions Block {#actions-block}
<a id="blocks.ActionsBlock"></a>
**Class**

```python
ActionsBlock(elements: list[Element] | None = None, block_id: str | None = None)
```

<div className="api-docstring">

A `Block` that is used to hold interactive elements (normally for users to interface with).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `elements` | `list[Element] \| None` | a list of [Elements](/v2.0.0/reference/elements)<br />(up to a maximum of 25). |
| `block_id` | `str \| None` | you can use this field to provide a deterministic identifier for the block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the items in `elements` are invalid. |

</div>

### from_dict classmethod {#blocks.ActionsBlock.from_dict}

```python
from_dict(data: dict[str, Any]) -> ActionsBlock
```

Parse a Slack ``actions`` block payload.

Currently raises ``NotImplementedError`` because round-tripping
depends on parsing nested elements; ``Element.from_dict`` will land
in Phase 7.4b.
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
from slackblocks import ActionsBlock, CheckboxGroup, Option

ActionsBlock(
    block_id="fake_block_id",
    elements=CheckboxGroup(
        action_id="actionId-0",
        options=[
            Option(text="*a*", value="a", description="*a*"),
            Option(text="*b*", value="b", description="*b*"),
            Option(text="*c*", value="c", description="*c*"),
        ],
    ),
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "actions",
    "block_id": "fake_block_id",
    "elements": [
        {
            "type": "checkboxes",
            "action_id": "actionId-0",
            "options": [
                {
                    "text": {
                        "type": "mrkdwn",
                        "text": "*a*"
                    },
                    "value": "a",
                    "description": {
                        "type": "plain_text",
                        "text": "*a*"
                    }
                },
                {
                    "text": {
                        "type": "mrkdwn",
                        "text": "*b*"
                    },
                    "value": "b",
                    "description": {
                        "type": "plain_text",
                        "text": "*b*"
                    }
                },
                {
                    "text": {
                        "type": "mrkdwn",
                        "text": "*c*"
                    },
                    "value": "c",
                    "description": {
                        "type": "plain_text",
                        "text": "*c*"
                    }
                }
            ]
        }
    ]
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of an Actions Block](/img/legacy/081da8626e0988b4a2683f4ed6644eb01e32569c/usage/actions.png)

</TabItem>
</Tabs>
## Table Block {#table-block}
<a id="blocks.TableBlock"></a>
**Class**

```python
TableBlock(rows: list[list[RawText | RichTextObject]], column_settings: list[ColumnSettings] | None = None, block_id: str | None = None)
```

<div className="api-docstring">

A `TableBlock` displays data in a table format.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `rows` | `list[list[RawText \| RichTextObject]]` | a list of lists of `RawText` or `RichTextObject` objects. |
| `column_settings` | `list[ColumnSettings] \| None` | a list of `ColumnSettings` objects. |
| `block_id` | `str \| None` | you can use this field to provide a deterministic identifier for the block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | when items in `rows` are not `RawText` or `RichTextObject` objects. |
| `InvalidUsageError` | when the number of column_settings does not match the number of<br />columns in each row. |
| `InvalidUsageError` | when the number of rows is greater than 100. |
| `InvalidUsageError` | when the number of columns in a row is greater than 20. |
| `InvalidUsageError` | when the number of column_settings is greater than 20. |

</div>

### from_dict classmethod {#blocks.TableBlock.from_dict}

```python
from_dict(data: dict[str, Any]) -> TableBlock
```

Parse a Slack ``table`` block payload.

Currently raises ``NotImplementedError`` because table cells may
contain rich-text objects whose round-trip parser is deferred to
Phase 7.4c.
<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
from slackblocks import (
    ColumnSettings,
    RawText,
    RichText,
    RichTextLink,
    RichTextSection,
    TableBlock,
)

TableBlock(
    column_settings=[
        ColumnSettings(align="right", is_wrapped=True),
        ColumnSettings(align="left"),
    ],
    rows=[
        [
            RichTextSection(
                elements=[RichText(text="Header 1", bold=True)],
            ),
            RichTextSection(
                elements=[RichText(text="Header 2", bold=True)],
            ),
        ],
        [
            RawText(text="Datum 1"),
            RichTextSection(
                elements=[
                    RichTextLink(
                        url="https://slack.com",
                        text="Datum 2",
                    )
                ],
            ),
        ],
    ],
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "blocks": [
        {
            "type": "table",
            "rows": [
                [
                    {
                        "type": "rich_text",
                        "elements": [
                            {
                                "type": "rich_text_section",
                                "elements": [
                                    {
                                        "type": "text",
                                        "text": "Header 1",
                                        "style": {
                                            "bold": true
                                        }
                                    }
                                ]
                            }
                        ]
                    },
                    {
                        "type": "rich_text",
                        "elements": [
                            {
                                "type": "rich_text_section",
                                "elements": [
                                    {
                                        "type": "text",
                                        "text": "Header 2",
                                        "style": {
                                            "bold": true
                                        }
                                    }
                                ]
                            }
                        ]
                    }
                ],
                [
                    {
                        "type": "rich_text",
                        "elements": [
                            {
                                "type": "rich_text_section",
                                "elements": [
                                    {
                                        "type": "text",
                                        "text": "Datum 1"
                                    }
                                ]
                            }
                        ]
                    },
                    {
                        "type": "rich_text",
                        "elements": [
                            {
                                "type": "rich_text_section",
                                "elements": [
                                    {
                                        "type": "text",
                                        "text": "Datum 2"
                                    }
                                ]
                            }
                        ]
                    }
                ]
            ]
        }
    ]
}
```

</TabItem>
<TabItem value="slack-ui" label="Slack UI">

![An example of the UI output of a Table Block](/img/legacy/081da8626e0988b4a2683f4ed6644eb01e32569c/usage/table.png)

</TabItem>
</Tabs>
## Video Block {#video-block}
<a id="blocks.VideoBlock"></a>
**Class**

```python
VideoBlock(alt_text: str, thumbnail_url: str, title: TextLike, video_url: str, author_name: str | None = None, block_id: str | None = None, description: TextLike | None = None, provider_icon_url: str | None = None, provider_name: str | None = None, title_url: str | None = None)
```

<div className="api-docstring">

Embeds a video. Used to display video content inside a Slack message,
modal, or App Home tab.

See: [https://api.slack.com/reference/block-kit/blocks#video](https://api.slack.com/reference/block-kit/blocks#video).

Note: Slack restricts which domains may be embedded. The server-side
whitelist (e.g. YouTube, Vimeo) is enforced by Slack on receipt of the
payload, not by this library; supplying an unsupported URL will result
in a Slack API error rather than an `InvalidUsageError` at construction.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `alt_text` | `str` | a plain-text summary of the video, used for accessibility<br />and notifications (max 200 chars). |
| `thumbnail_url` | `str` | a URL pointing to the preview image shown before<br />playback. Must be HTTPS in production usage. |
| `title` | `TextLike` | the title shown above the video player (plain text, max 200<br />chars). A `str` is coerced to `TextType.PLAINTEXT` `Text`. |
| `video_url` | `str` | the URL of the video to embed. Must point to a<br />Slack-supported provider (see Slack's documentation). |
| `author_name` | `str \| None` | optional author name shown beneath the video<br />(max 50 chars). |
| `block_id` | `str \| None` | an optional deterministic identifier for the block. |
| `description` | `TextLike \| None` | optional plain-text description below the video<br />(max 200 chars). A `str` is coerced to `TextType.PLAINTEXT`. |
| `provider_icon_url` | `str \| None` | an optional URL to the provider's icon. |
| `provider_name` | `str \| None` | an optional provider name shown alongside the icon<br />(max 50 chars). |
| `title_url` | `str \| None` | an optional URL to link the title to. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `LengthError` | if any length-constrained string exceeds its limit. |

</div>

### from_dict classmethod {#blocks.VideoBlock.from_dict}

```python
from_dict(data: dict[str, Any]) -> VideoBlock
```

Parse a Slack ``video`` block payload.
Embeds a video from a Slack-supported provider (e.g. YouTube, Vimeo). The `title` accepts either a `str` (coerced to plain-text) or a `Text` instance; `description` works the same way.

Required: `alt_text`, `thumbnail_url`, `title`, `video_url`. Slack restricts which domains may be embedded — supplying an unsupported URL will produce a Slack API error rather than an `InvalidUsageError` at construction.

<Tabs>
<TabItem value="slackblocks" label="`slackblocks`">

```python
from slackblocks import VideoBlock

VideoBlock(
    alt_text="How to use slackblocks",
    thumbnail_url="https://example.com/thumb.png",
    title="Getting Started",
    video_url="https://example.com/video.mp4",
    author_name="The slackblocks docs",
    description="A short walkthrough.",
    provider_name="example.com",
    title_url="https://example.com",
)
```

</TabItem>
<TabItem value="json" label="JSON">

```json
{
    "type": "video",
    "alt_text": "How to use slackblocks",
    "thumbnail_url": "https://example.com/thumb.png",
    "title": {
        "type": "plain_text",
        "text": "Getting Started"
    },
    "video_url": "https://example.com/video.mp4",
    "author_name": "The slackblocks docs",
    "description": {
        "type": "plain_text",
        "text": "A short walkthrough."
    },
    "provider_name": "example.com",
    "title_url": "https://example.com"
}
```

</TabItem>
</Tabs>
See the [Slack reference](https://api.slack.com/reference/block-kit/blocks#video) for the full list of optional fields and provider requirements.
